--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
           <ul class="feature-list">
             <li class="feature-item">
               <div class="feature">
-                <svg></svg>
+                <svg class="feature-icon">
+                  <use href=".//img/sprite.svg#icon-Antenna"></use>
+                </svg>
               </div>
               <h3 class="section-title">Внимание к деталям</h3>
               <p class="section-content">
@@ -95,7 +97,9 @@
             </li>
             <li class="feature-item">
               <div class="feature">
-                <svg></svg>
+                <svg class="feature-icon">
+                  <use href=".//img/sprite.svg#icon-clock"></use>
+                </svg>
               </div>
               <h3 class="section-title">Пунктуальность</h3>
               <p class="section-content">
@@ -105,7 +109,9 @@
             </li>
             <li class="feature-item">
               <div class="feature">
-                <svg></svg>
+                <svg class="feature-icon">
+                  <use href=".//img/sprite.svg#icon-diagram"></use>
+                </svg>
               </div>
               <h3 class="section-title">Планирование</h3>
               <p class="section-content">
@@ -115,7 +121,9 @@
             </li>
             <li class="feature-item">
               <div class="feature">
-                <svg></svg>
+                <svg class="feature-icon">
+                  <use href=".//img/sprite.svg#icon-astronaut"></use>
+                </svg>
               </div>
               <h3 class="section-title">Современные технологии</h3>
               <p class="section-content">
@@ -175,51 +183,43 @@
                 <h3 class="section-title">Игорь Демьяненко</h3>
                 <p class="section-content">Product Designer</p>
                 <ul class="social-list">
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg class="social-icon">
-                        <use
-                          href="./img/sprite.svg#icon-instagram1"
-                          width="20"
-                          height="20"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-Twitter1"
-                          width="20"
-                          height="16.25"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-facebook1"
-                          width="20"
-                          height="40"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-linkedin1"
-                          width="20"
-                          height="20"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-instagram1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-Twitter1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-facebook1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-linkedin1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
               </div>
             </li>
             <li class="team-item">
@@ -233,51 +233,43 @@
                 <h3 class="section-title">Ольга Репина</h3>
                 <p class="section-content">Frontend Developer</p>
                 <ul class="social-list">
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg class="social-icon">
-                        <use
-                          href="./img/sprite.svg#icon-instagram1"
-                          width="20"
-                          height="20"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-Twitter1"
-                          width="20"
-                          height="16.25"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-facebook1"
-                          width="20"
-                          height="40"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-linkedin1"
-                          width="20"
-                          height="20"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-instagram1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-Twitter1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-facebook1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-linkedin1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
               </div>
             </li>
             <li class="team-item">
@@ -290,53 +282,44 @@
               <div class="team-footer">
                 <h3 class="section-title">Николай Тарасов</h3>
                 <p class="section-content">Marketing</p>
-                <ul class="social-list">
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg class="social-icon">
-                        <use
-                          href="./img/sprite.svg#icon-instagram1"
-                          width="20"
-                          height="20"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-Twitter1"
-                          width="20"
-                          height="16.25"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-facebook1"
-                          width="20"
-                          height="40"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-linkedin1"
-                          icon-linkedin1
-                          width="20"
-                          height="20"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+               <ul class="social-list">
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-instagram1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-Twitter1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-facebook1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-linkedin1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
               </div>
             </li>
             <li class="team-item">
@@ -350,52 +333,110 @@
                 <h3 class="section-title">Михаил Ермаков</h3>
                 <p class="section-content">UI Designer</p>
                 <ul class="social-list">
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg class="social-icon">
-                        <use
-                          href="./img/sprite.svg#icon-instagram1"
-                          width="20"
-                          height="20"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-Twitter1"
-                          width="20"
-                          height="16.25"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-facebook1"
-                          width="20"
-                          height="40"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="" class="team-social"
-                      ><svg>
-                        <use
-                          href="./img/sprite.svg#icon-linkedin1"
-                          width="20"
-                          height="20"
-                        ></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-instagram1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-Twitter1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-facebook1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a href="" class="social-link"
+              ><svg class="social-icon">
+                <use class="social-img"
+                  href="./img/sprite.svg#icon-linkedin1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        </div>
+      </section>
+
+      <!-- Постоянные клиенты -->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-heading">Постоянные клиенты</h2>
+          <ul class="client-list">
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon">
+                  <use
+                    class="client-order"
+                    href="./img/sprite.svg#icon-client3"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon">
+                  <use
+                    class="client-order"
+                    href="./img/sprite.svg#icon-client4"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon">
+                  <use
+                    class="client-order"
+                    href="./img/sprite.svg#icon-client5"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon">
+                  <use
+                    class="client-order"
+                    href="./img/sprite.svg#icon-client"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon">
+                  <use
+                    class="client-order"
+                    href="./img/sprite.svg#icon-client2"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client-item">
+              <a href="" class="client-link"
+                ><svg class="client-icon">
+                  <use
+                    class="client-order"
+                    href="./img/sprite.svg#icon-client6"
+                  ></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -403,9 +444,12 @@
     </main>
 
     <!--footer-->
+    
     <footer class="page-footer">
       <!--logo-footer-->
-      <div class="footer container">
+      <ul class="footer-chunks container">
+        <li class="chunks-item">
+          <div class="footer">
         <a href="" class="brandname" lang="en"
           ><span class="brandname-one">Web</span
           ><span class="brandname-two">Studio</span></a
@@ -434,6 +478,57 @@
           </ul>
         </address>
       </div>
+    </li>
+        <li class="chunks-item">
+          <div class="footer container">
+          <h2 class="section-title">
+          <span class="footer-heading">присоединяйтесь</span>
+        </h2>
+        <ul class="footer-list">
+          <li class="footer-social-item">
+            <a href="" class="footer-link"
+              ><svg class="footer-icon">
+                <use
+                  class="footer-img"
+                  href="./img/sprite.svg#icon-instagram1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-link"
+              ><svg class="footer-icon">
+                <use
+                  class="footer-img"
+                  href="./img/sprite.svg#icon-Twitter1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-link"
+              ><svg class="footer-icon">
+                <use
+                  class="footer-img"
+                  href="./img/sprite.svg#icon-facebook1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a href="" class="footer-link"
+              ><svg class="footer-icon">
+                <use
+                  class="footer-img"
+                  href="./img/sprite.svg#icon-linkedin1"
+                ></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </li>
     </footer>
+
   </body>
 </html>
