Після правок(все працює)

--- a/index.html
+++ b/index.html
@@ -443,8 +443,8 @@
     <!--footer-->
 
     <footer class="page-footer"><!--logo-footer-->
-      <ul class="footer-chunks container"> <li class="chunks-item">
-          <div class="footer">
+      <div class="container footer">
+<div>
         <a href="" class="brandname" lang="en"
           ><span class="brandname-one">Web</span
           ><span class="brandname-two">Studio</span></a
@@ -473,11 +473,9 @@
           </ul>
         </address>
       </div>
-    </li>
-        <li class="chunks-item">
-          <div class="footer container">
-          <h2 class="section-title">
-          <span class="footer-heading">присоединяйтесь</span>
+          <div class="footer-social">
+          <h2 class="footer-heading">
+          присоединяйтесь
         </h2>
         <ul class="footer-list">
           <li class="footer-social-item">
@@ -522,7 +520,7 @@
           </li>
         </ul>
       </div>
-    </li></ul>
+      </div>
        </footer>
       
     
