--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
                 </div>
 
                 <div class="card-footer">
-                  <h2 class="cards">Технокряк</h2>
+                  <h2 class="cards-heading">Технокряк</h2>
                   <p class="cards-content">Веб-сайт</p>
                 </div>
               </a>
@@ -119,7 +119,9 @@
                   />
                 </div>
                 <div class="card-footer">
-                  <h2 class="cards">Постер New Orlean vs Golden Star</h2>
+                  <h2 class="cards-heading">
+                    Постер New Orlean vs Golden Star
+                  </h2>
                   <p class="cards-content">Дизайн</p>
                 </div>
               </a>
@@ -136,7 +138,7 @@
                   />
                 </div>
                 <div class="card-footer">
-                  <h2 class="cards">Ресторан Seafood</h2>
+                  <h2 class="cards-heading">Ресторан Seafood</h2>
                   <p class="cards-content">Приложение</p>
                 </div>
               </a>
@@ -154,7 +156,7 @@
                   />
                 </div>
                 <div class="card-footer">
-                  <h2 class="cards">Проект Prime</h2>
+                  <h2 class="cards-heading">Проект Prime</h2>
                   <p class="cards-content">Маркетинг</p>
                 </div>
               </a>
@@ -172,7 +174,7 @@
                   />
                 </div>
                 <div class="card-footer">
-                  <h2 class="cards">Проект Boxes</h2>
+                  <h2 class="cards-heading">Проект Boxes</h2>
                   <p class="cards-content">Приложение</p>
                 </div>
               </a>
@@ -190,7 +192,7 @@
                   />
                 </div>
                 <div class="card-footer">
-                  <h2 class="cards">Inspiration has no Borders</h2>
+                  <h2 class="cards-heading">Inspiration has no Borders</h2>
                   <p class="cards-content">Веб-сайт</p>
                 </div>
               </a>
@@ -208,7 +210,7 @@
                 </div>
 
                 <div class="card-footer">
-                  <h2 class="cards">Издание Limited Edition</h2>
+                  <h2 class="cards-heading">Издание Limited Edition</h2>
                   <p class="cards-content">Дизайн</p>
                 </div>
               </a>
@@ -226,7 +228,7 @@
                 </div>
 
                 <div class="card-footer">
-                  <h2 class="cards">Проект LAB</h2>
+                  <h2 class="cards-heading">Проект LAB</h2>
                   <p class="cards-content">Маркетинг</p>
                 </div>
               </a>
@@ -244,7 +246,7 @@
                 </div>
 
                 <div class="card-footer">
-                  <h2 class="cards">Growing Business</h2>
+                  <h2 class="cards-heading">Growing Business</h2>
                   <p class="cards-content">Приложение</p>
                 </div>
               </a>
@@ -258,88 +260,82 @@
 
     <footer class="page-footer">
       <!--logo-footer-->
-      <ul class="footer-chunks container">
-        <li class="chunks-item">
-          <div class="footer">
-        <a href="" class="brandname" lang="en"
-          ><span class="brandname-one">Web</span
-          ><span class="brandname-two">Studio</span></a
-        >
-        <address class="address">
-          <ul>
-            <li class="footer-item">
-              <a
-                href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="contacts-geoposition"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+      <div class="container footer">
+        <div>
+          <a href="" class="brandname" lang="en"
+            ><span class="brandname-one">Web</span
+            ><span class="brandname-two">Studio</span></a
+          >
+          <address class="address">
+            <ul>
+              <li class="footer-item">
+                <a
+                  href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="contacts-geoposition"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="mailto:info@devstudio.com" class="contacts-link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380961111111" class="contacts-link"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h2 class="footer-heading">присоединяйтесь</h2>
+          <ul class="footer-list">
+            <li class="footer-social-item">
+              <a href="" class="footer-link"
+                ><svg class="footer-icon">
+                  <use
+                    class="footer-img"
+                    href="./img/sprite.svg#icon-instagram1"
+                  ></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="contacts-link"
-                >info@devstudio.com</a
-              >
+            <li class="footer-social-item">
+              <a href="" class="footer-link"
+                ><svg class="footer-icon">
+                  <use
+                    class="footer-img"
+                    href="./img/sprite.svg#icon-Twitter1"
+                  ></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="contacts-link"
-                >+38 096 111 11 11</a
-              >
+            <li class="footer-social-item">
+              <a href="" class="footer-link"
+                ><svg class="footer-icon">
+                  <use
+                    class="footer-img"
+                    href="./img/sprite.svg#icon-facebook1"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="" class="footer-link"
+                ><svg class="footer-icon">
+                  <use
+                    class="footer-img"
+                    href="./img/sprite.svg#icon-linkedin1"
+                  ></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
-    </li>
-        <li class="chunks-item">
-          <div class="footer container">
-          <h2 class="section-title">
-          <span class="footer-heading">присоединяйтесь</span>
-        </h2>
-        <ul class="footer-list">
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
-                <use
-                  class="footer-img"
-                  href="./img/sprite.svg#icon-instagram1"
-                ></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
-                <use
-                  class="footer-img"
-                  href="./img/sprite.svg#icon-Twitter1"
-                ></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
-                <use
-                  class="footer-img"
-                  href="./img/sprite.svg#icon-facebook1"
-                ></use>
-              </svg>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a href="" class="footer-link"
-              ><svg class="footer-icon">
-                <use
-                  class="footer-img"
-                  href="./img/sprite.svg#icon-linkedin1"
-                ></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </li>
     </footer>
-    
   </body>
 </html>
