--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
         <ul class="contacts">
           <li class="nav-item">
             <a href="mailto:info@devstudio.com" class="contacts-nav">
-              <svg class="contacts-icon contacts-nav" width="16" height="12">
+              <svg class="contacts-icon" width="16" height="12">
                 <use href="./img/sprite.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -51,11 +51,7 @@
           </li>
           <li class="nav-item">
             <a href="tel:+380961111111" class="contacts-nav"
-              ><svg
-                class="contacts-icon-phone contacts-nav"
-                width="10"
-                height="16"
-              >
+              ><svg class="contacts-icon-phone" width="10" height="16">
                 <use href="./img/sprite.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
