--- a/index.html
+++ b/index.html
@@ -74,7 +74,13 @@
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button type="button" class="hero-button">Заказать услугу</button>
+          <button type="button" class="hero-button" data-modal-open>Заказать услугу</button>
+          <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum reiciendis nihil eveniet quam voluptatum eaque aliquid quidem qui dicta, deleniti natus ipsum eum ipsam vel est adipisci quae, dolore cupiditate.</p>
+              <button data-modal-close>Закрыть</button>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -525,6 +531,7 @@
        </footer>
       
     
+ <script src="./js/modal.js"></script>
 
   </body>
 </html>
