--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum reiciendis nihil eveniet quam voluptatum eaque aliquid quidem qui dicta, deleniti natus ipsum eum ipsam vel est adipisci quae, dolore cupiditate.</p>
-              <button data-modal-close>Закрыть</button>
+              <button type="button" class="modal-button" data-modal-close>Закрыть</button>
             </div>
           </div>
         </div>
@@ -146,29 +146,43 @@
           <h2 class="section-heading">Чем мы занимаемся</h2>
           <ul class="feature-list">
             <li class="feature-item">
-              <img
+              <div class="work-thumb">
+                <img
                 src="./img/first-photo.jpg"
                 alt="Работа с кодом"
                 width="370"
                 height="294"
               />
-              
+              <div class="work-actions">
+                <p>Десктопные приложения</p>
+              </div>
+              </div>
             </li>
             <li class="feature-item">
-              <img
+              <div class="work-thumb">
+                <img
                 src="./img/second-photo.jpg"
                 alt="Работа с дизайном"
                 width="370"
                 height="294"
               />
+              <div class="work-actions">
+                <p>Мобильные приложения</p>
+              </div>
+              </div>
             </li>
             <li class="feature-item">
-              <img
+              <div class="work-thumb">
+                <img
                 src="./img/third-photo.jpg"
                 alt="Работа с дизайном"
                 width="370"
                 height="294"
               />
+              <div class="work-actions">
+                <p>Дизайнерские решения</p>
+              </div>
+              </div>
             </li>
           </ul>
         </div>
