--- a/portfolio.html
+++ b/portfolio.html
@@ -101,6 +101,13 @@
                   <h2 class="cards-heading">Технокряк</h2>
                   <p class="cards-content">Веб-сайт</p>
                 </div>
+                <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
               </a>
             </li>
 
@@ -120,6 +127,13 @@
                   </h2>
                   <p class="cards-content">Дизайн</p>
                 </div>
+                <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
               </a>
             </li>
 
@@ -136,6 +150,13 @@
                 <div class="card-footer">
                   <h2 class="cards-heading">Ресторан Seafood</h2>
                   <p class="cards-content">Приложение</p>
+                </div>
+                <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
                 </div>
               </a>
             </li>
@@ -155,6 +176,13 @@
                   <h2 class="cards-heading">Проект Prime</h2>
                   <p class="cards-content">Маркетинг</p>
                 </div>
+                <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
               </a>
             </li>
 
@@ -172,6 +200,13 @@
                 <div class="card-footer">
                   <h2 class="cards-heading">Проект Boxes</h2>
                   <p class="cards-content">Приложение</p>
+                </div>
+                <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
                 </div>
               </a>
             </li>
@@ -191,6 +226,13 @@
                   <h2 class="cards-heading">Inspiration has no Borders</h2>
                   <p class="cards-content">Веб-сайт</p>
                 </div>
+                <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
               </a>
             </li>
 
@@ -208,6 +250,13 @@
                 <div class="card-footer">
                   <h2 class="cards-heading">Издание Limited Edition</h2>
                   <p class="cards-content">Дизайн</p>
+                </div>
+                <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
                 </div>
               </a>
             </li>
@@ -227,6 +276,13 @@
                   <h2 class="cards-heading">Проект LAB</h2>
                   <p class="cards-content">Маркетинг</p>
                 </div>
+                <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
               </a>
             </li>
 
@@ -244,6 +300,13 @@
                 <div class="card-footer">
                   <h2 class="cards-heading">Growing Business</h2>
                   <p class="cards-content">Приложение</p>
+                </div>
+                <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
                 </div>
               </a>
             </li>
