--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
           <button type="button" class="hero-button" data-modal-open>Заказать услугу</button>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum reiciendis nihil eveniet quam voluptatum eaque aliquid quidem qui dicta, deleniti natus ipsum eum ipsam vel est adipisci quae, dolore cupiditate.</p>
-              <button type="button" class="modal-button" data-modal-close>Закрыть</button>
+              <button type="button" class="modal-button" data-modal-close> &#215 </button>
             </div>
           </div>
         </div>
