--- a/portfolio.html
+++ b/portfolio.html
@@ -89,24 +89,24 @@
             <li class="card-item">
               <a href="" class="cards">
                 <div class="card-thumb">
-                  <img
+                  <div class="card-block">
+                    <img
                     src="./img/card-1.jpg"
                     alt="Ноутбук с веб-сайтом"
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                    <p>
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+                    </p>
+                  </div>
+                  </div>
                 </div>
 
                 <div class="card-footer">
                   <h2 class="cards-heading">Технокряк</h2>
                   <p class="cards-content">Веб-сайт</p>
-                </div>
-                <div class="card-overlay">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                    repudiandae nostrum quo ea sapiente earum quam magni dicta
-                    eveniet dolores!
-                  </p>
                 </div>
               </a>
             </li>
@@ -127,13 +127,6 @@
                   </h2>
                   <p class="cards-content">Дизайн</p>
                 </div>
-                <div class="card-overlay">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                    repudiandae nostrum quo ea sapiente earum quam magni dicta
-                    eveniet dolores!
-                  </p>
-                </div>
               </a>
             </li>
 
@@ -150,13 +143,6 @@
                 <div class="card-footer">
                   <h2 class="cards-heading">Ресторан Seafood</h2>
                   <p class="cards-content">Приложение</p>
-                </div>
-                <div class="card-overlay">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                    repudiandae nostrum quo ea sapiente earum quam magni dicta
-                    eveniet dolores!
-                  </p>
                 </div>
               </a>
             </li>
@@ -176,13 +162,6 @@
                   <h2 class="cards-heading">Проект Prime</h2>
                   <p class="cards-content">Маркетинг</p>
                 </div>
-                <div class="card-overlay">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                    repudiandae nostrum quo ea sapiente earum quam magni dicta
-                    eveniet dolores!
-                  </p>
-                </div>
               </a>
             </li>
 
@@ -200,13 +179,6 @@
                 <div class="card-footer">
                   <h2 class="cards-heading">Проект Boxes</h2>
                   <p class="cards-content">Приложение</p>
-                </div>
-                <div class="card-overlay">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                    repudiandae nostrum quo ea sapiente earum quam magni dicta
-                    eveniet dolores!
-                  </p>
                 </div>
               </a>
             </li>
@@ -226,13 +198,6 @@
                   <h2 class="cards-heading">Inspiration has no Borders</h2>
                   <p class="cards-content">Веб-сайт</p>
                 </div>
-                <div class="card-overlay">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                    repudiandae nostrum quo ea sapiente earum quam magni dicta
-                    eveniet dolores!
-                  </p>
-                </div>
               </a>
             </li>
 
@@ -250,13 +215,6 @@
                 <div class="card-footer">
                   <h2 class="cards-heading">Издание Limited Edition</h2>
                   <p class="cards-content">Дизайн</p>
-                </div>
-                <div class="card-overlay">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                    repudiandae nostrum quo ea sapiente earum quam magni dicta
-                    eveniet dolores!
-                  </p>
                 </div>
               </a>
             </li>
@@ -276,13 +234,6 @@
                   <h2 class="cards-heading">Проект LAB</h2>
                   <p class="cards-content">Маркетинг</p>
                 </div>
-                <div class="card-overlay">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                    repudiandae nostrum quo ea sapiente earum quam magni dicta
-                    eveniet dolores!
-                  </p>
-                </div>
               </a>
             </li>
 
@@ -301,12 +252,6 @@
                   <h2 class="cards-heading">Growing Business</h2>
                   <p class="cards-content">Приложение</p>
                 </div>
-                <div class="card-overlay">
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
-                    repudiandae nostrum quo ea sapiente earum quam magni dicta
-                    eveniet dolores!
-                  </p>
                 </div>
               </a>
             </li>
