card animation done

--- a/portfolio.html
+++ b/portfolio.html
@@ -89,18 +89,17 @@
             <li class="card-item">
               <a href="" class="cards">
                 <div class="card-thumb">
-                  <div class="card-block">
-                    <img
+                  <img
                     src="./img/card-1.jpg"
                     alt="Ноутбук с веб-сайтом"
                     width="370"
                     height="294"
                   />
+
                   <div class="card-overlay">
                     <p>
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.
                     </p>
-                  </div>
                   </div>
                 </div>
 
@@ -120,6 +119,13 @@
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
                 </div>
                 <div class="card-footer">
                   <h2 class="cards-heading">
@@ -139,6 +145,13 @@
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
                 </div>
                 <div class="card-footer">
                   <h2 class="cards-heading">Ресторан Seafood</h2>
@@ -157,6 +170,13 @@
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
                 </div>
                 <div class="card-footer">
                   <h2 class="cards-heading">Проект Prime</h2>
@@ -175,6 +195,13 @@
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
                 </div>
                 <div class="card-footer">
                   <h2 class="cards-heading">Проект Boxes</h2>
@@ -193,6 +220,13 @@
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
                 </div>
                 <div class="card-footer">
                   <h2 class="cards-heading">Inspiration has no Borders</h2>
@@ -210,6 +244,13 @@
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
                 </div>
 
                 <div class="card-footer">
@@ -228,6 +269,13 @@
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
                 </div>
 
                 <div class="card-footer">
@@ -246,6 +294,13 @@
                     width="370"
                     height="294"
                   />
+                  <div class="card-overlay">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id
+                    repudiandae nostrum quo ea sapiente earum quam magni dicta
+                    eveniet dolores!
+                  </p>
+                </div>
                 </div>
 
                 <div class="card-footer">
