sample modal window

--- a/index.html
+++ b/index.html
@@ -78,6 +78,39 @@
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <button type="button" class="modal-button" data-modal-close> &#215 </button>
+              <form action="" class="form">
+                <h2 class="form-title">Оставьте свои данные, мы вам перезвоним</h2>
+
+                <label for="name" class="form-field">
+                  <input type="text" class="form-input" name="name" placeholder=" ">
+                  <span class="form-label">Имя</span>
+                  <span class="form-icon"></span>
+                </label>
+
+                <label for="tel" class="form-field">
+                  <input type="tel" class="form-input" name="tel" placeholder=" ">
+                  <span class="form-label">Телефон</span>
+                  <span class="form-icon"></span>
+                </label>
+
+                <label for="email" class="form-field">
+                  <input type="email" class="form-input" name="email" placeholder=" ">
+                  <span class="form-label">Почта</span>
+                  <span class="form-icon"></span>
+                </label>
+
+                <label for="comment" class="form-field">
+                  <textarea name="comment" id="" cols="30" rows="10" placeholder="Введите текст">Комментарий</textarea>
+                </label>
+
+                <label for="agreement" class="form-field">
+                  <input type="checkbox" class="form-input" name="agreement" placeholder="">
+                  <span class="section-content">Соглашаюсь с рассылкой и принимаю <a class="form-agreement"> Условия договора</a>
+                </span>
+                </label>
+
+                <button class="form-button">Закрыть</button>
+              </form>
             </div>
           </div>
         </div>
