--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
           <span class="subscribe-email"></span>
         </label>
         
-        <button></button>
+        <button class="subscribe-button">Подписаться</button>
       </div>
     </div>
        </footer>
