--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 height="294"
               />
               <div class="work-actions">
-                <p>Десктопные приложения</p>
+                <p class="work-actions-content">Десктопные приложения</p>
               </div>
               </div>
             </li>
@@ -206,7 +206,7 @@
                 height="294"
               />
               <div class="work-actions">
-                <p>Мобильные приложения</p>
+                <p class="work-actions-content">Мобильные приложения</p>
               </div>
               </div>
             </li>
@@ -219,7 +219,7 @@
                 height="294"
               />
               <div class="work-actions">
-                <p>Дизайнерские решения</p>
+                <p class="work-actions-content">Дизайнерские решения</p>
               </div>
               </div>
             </li>
@@ -534,7 +534,7 @@
         </address>
       </div>
           <div class="footer-social">
-          <h2 class="footer-heading">
+          <h2 class="work-actions-content">
           присоединяйтесь
         </h2>
         <ul class="footer-list">
@@ -581,13 +581,17 @@
         </ul>
       </div>
       <div class="footer-form">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <label for="subscribe-form" class="footer-subscribe">
-          <input type="subscribe-email" name="subscribe-form" class="subscribe-input">
-          <span class="subscribe-email"></span>
-        </label>
-        
-        <button class="subscribe-button">Подписаться</button>
+        <h2 class="work-actions-content">Подпишитесь на рассылку</h2>
+        <ul class="footer-list">
+          <li>
+            <label for="subscribe-form" class="footer-subscribe">
+              <input type="subscribe-email" name="subscribe-form" class="subscribe-input" placeholder="E-mail" autocomplete="on">
+            </label>
+          </li>
+      <li>
+        <button type="submit" class="subscribe-button">Подписаться</button>
+      </li>
+        </ul>
       </div>
     </div>
        </footer>
